--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "i18next-localstorage-backend": "^4.2.0",
     "install": "^0.13.0",
     "next": "^14.2.6",
+    "next-auth": "^4.24.11",
     "next-i18next": "^15.3.1",
     "next-redux-wrapper": "^8.1.0",
     "next-transpile-modules": "^10.0.1",
