--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "@atlaskit/tokens": "^1.45.1",
     "@atlaskit/tooltip": "^18.3.0",
     "@breezeos-dev/use-react-screenshot": "^2.0.2",
+    "@codemirror/lang-json": "^6.0.1",
     "@emotion/react": "^11.11.3",
     "@reduxjs/toolkit": "^2.2.3",
+    "@uiw/react-codemirror": "^4.23.6",
     "axios": "^1.6.0",
     "bind-event-listener": "^3.0.0",
     "copy-to-clipboard": "^3.3.3",
