--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-redux": "^9.1.2",
     "react-secure-storage": "^1.3.2",
     "react-web-share": "^2.0.2",
+    "readme-md-generator": "^1.0.0",
     "redux": "^5.0.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
