change log: - fix some issue - update footer content

--- a/package.json
+++ b/package.json
@@ -11,59 +11,58 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@atlaskit/app-provider": "^1.3.1",
-    "@atlaskit/atlassian-navigation": "^4.7.0",
-    "@atlaskit/avatar": "^21.6.0",
-    "@atlaskit/banner": "^12.3.1",
-    "@atlaskit/breadcrumbs": "^12.0.8",
-    "@atlaskit/button": "^17.14.2",
-    "@atlaskit/checkbox": "^13.3.0",
-    "@atlaskit/code": "^15.1.0",
-    "@atlaskit/css-reset": "^6.9.0",
+    "@atlaskit/app-provider": "^1.0.0",
+    "@atlaskit/atlassian-navigation": "^3.2.0",
+    "@atlaskit/avatar": "^21.4.6",
+    "@atlaskit/banner": "^12.1.19",
+    "@atlaskit/blanket": "^10.0.18",
+    "@atlaskit/breadcrumbs": "^12.0.5",
+    "@atlaskit/button": "^17.3.0",
+    "@atlaskit/checkbox": "^13.0.1",
+    "@atlaskit/code": "^14.0.0",
+    "@atlaskit/css-reset": "latest",
     "@atlaskit/date": "^0.10.6",
-    "@atlaskit/datetime-picker": "^13.5.0",
-    "@atlaskit/drawer": "^7.7.2",
-    "@atlaskit/dropdown-menu": "^12.17.3",
-    "@atlaskit/dynamic-table": "^14.16.3",
-    "@atlaskit/empty-state": "^7.8.0",
-    "@atlaskit/eslint-plugin-design-system": "^9.7.0",
-    "@atlaskit/flag": "^14.0.1",
-    "@atlaskit/form": "^9.3.1",
-    "@atlaskit/grid": "^0.12.1",
-    "@atlaskit/heading": "^2.2.0",
+    "@atlaskit/datetime-picker": "^13.2.3",
+    "@atlaskit/drawer": "^7.6.6",
+    "@atlaskit/dropdown-menu": "^12.23.4",
+    "@atlaskit/dynamic-table": "^14.14.0",
+    "@atlaskit/empty-state": "^7.7.1",
+    "@atlaskit/flag": "^14.2.0",
+    "@atlaskit/form": "^9.0.6",
+    "@atlaskit/grid": "^0.11.12",
+    "@atlaskit/heading": "^1.6.0",
     "@atlaskit/icon": "^22.1.1",
-    "@atlaskit/icon-object": "^6.4.0",
-    "@atlaskit/image": "^1.1.7",
-    "@atlaskit/inline-message": "^12.1.0",
-    "@atlaskit/lozenge": "^11.7.1",
-    "@atlaskit/media-avatar-picker": "^24.6.1",
-    "@atlaskit/media-card": "^77.11.1",
-    "@atlaskit/menu": "^2.2.1",
-    "@atlaskit/mobile-header": "^6.1.9",
-    "@atlaskit/modal-dialog": "^12.13.2",
+    "@atlaskit/icon-object": "^6.3.8",
+    "@atlaskit/image": "^1.1.6",
+    "@atlaskit/inline-message": "^12.0.5",
+    "@atlaskit/lozenge": "^11.6.2",
+    "@atlaskit/media-avatar-picker": "^24.3.22",
+    "@atlaskit/media-card": "^77.10.2",
+    "@atlaskit/menu": "^2.1.6",
+    "@atlaskit/mobile-header": "^6.2.3",
+    "@atlaskit/modal-dialog": "^12.10.6",
     "@atlaskit/navigation": "^37.0.2",
     "@atlaskit/navigation-next": "^9.0.17",
     "@atlaskit/notification-indicator": "^9.2.0",
-    "@atlaskit/page": "^12.3.7",
-    "@atlaskit/page-header": "^10.4.10",
-    "@atlaskit/page-layout": "^3.2.1",
-    "@atlaskit/popup": "^1.17.0",
-    "@atlaskit/portal": "^4.4.2",
-    "@atlaskit/progress-bar": "^2.3.1",
-    "@atlaskit/radio": "^6.3.0",
-    "@atlaskit/select": "^17.8.0",
-    "@atlaskit/side-navigation": "^3.4.2",
-    "@atlaskit/spinner": "^16.1.0",
-    "@atlaskit/table": "^0.4.30",
-    "@atlaskit/table-tree": "^9.8.0",
-    "@atlaskit/tabs": "^16.0.0",
-    "@atlaskit/tag": "^12.1.0",
-    "@atlaskit/textarea": "^5.4.0",
-    "@atlaskit/textfield": "^6.3.0",
-    "@atlaskit/theme": "^12.7.1",
-    "@atlaskit/toggle": "^13.0.5",
-    "@atlaskit/tokens": "^1.45.1",
-    "@atlaskit/tooltip": "^18.3.0",
+    "@atlaskit/page": "^12.3.6",
+    "@atlaskit/page-header": "^10.4.5",
+    "@atlaskit/page-layout": "^2.1.2",
+    "@atlaskit/popup": "^1.12.0",
+    "@atlaskit/portal": "^4.4.0",
+    "@atlaskit/radio": "^6.0.2",
+    "@atlaskit/select": "^17.1.2",
+    "@atlaskit/side-navigation": "^3.0.5",
+    "@atlaskit/spinner": "^16.0.1",
+    "@atlaskit/table": "^0.4.23",
+    "@atlaskit/table-tree": "^9.6.13",
+    "@atlaskit/tabs": "^14.0.1",
+    "@atlaskit/tag": "^12.0.1",
+    "@atlaskit/textarea": "^5.0.1",
+    "@atlaskit/textfield": "^6.4.0",
+    "@atlaskit/theme": "^12.6.4",
+    "@atlaskit/toggle": "^13.0.3",
+    "@atlaskit/tokens": "^1.35.0",
+    "@atlaskit/tooltip": "^18.9.4",
     "@breezeos-dev/use-react-screenshot": "^2.0.2",
     "@codemirror/lang-json": "^6.0.1",
     "@emotion/react": "^11.11.3",
@@ -113,7 +112,6 @@
     "sharp": "^0.33.5",
     "styled-components": "^6.1.10",
     "swr": "^2.2.5",
-    "xlsx": "^0.18.5",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
