--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev-inspect": "NODE_OPTIONS='--inspect' next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint",
-    "postinstall": "npm rebuild sharp"
+    "lint": "next lint"
   },
   "dependencies": {
     "@atlaskit/app-provider": "^1.0.0",
@@ -117,7 +116,6 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "registry.npmjs.org": "^1.0.1",
-    "sharp": "^0.33.5",
     "styled-components": "^6.1.10",
     "swr": "^2.2.5",
     "yarn": "^1.22.22"
