--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev-inspect": "NODE_OPTIONS='--inspect' next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "npm rebuild --platform=linux --arch=x64"
   },
   "dependencies": {
     "@atlaskit/app-provider": "^1.0.0",
