--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,12 @@
     "app/api/**/*.js": {
       "maxDuration": 30
     }
-  }
+  },
+  "build": {
+    "env": {
+      "SHARP_IGNORE_GLOBAL_LIBVIPS": "1",
+      "NEXT_SHARP_PATH": "/tmp/node_modules/sharp"
+    }
+  },
+  "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh && npm run build"
 }
