chore: refine configuration and remove unnecessary files
- Removed sharp binary host configurations from .npmrc.
- Updated next.config.js to disable poweredByHeader, generateEtags, and trailingSlash.
- Cleaned up package.json by removing the postinstall script.
- Deleted vercel-build.sh as it is no longer needed.
- Simplified vercel.json by retaining only essential environment variables.

--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "dev-inspect": "NODE_OPTIONS='--inspect' next dev -p 3001",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint",
-    "postinstall": "npm rebuild --platform=linux --arch=x64"
+    "lint": "next lint"
   },
   "dependencies": {
     "@atlaskit/app-provider": "^1.0.0",
