--- a/vercel.json
+++ b/vercel.json
@@ -6,9 +6,7 @@
   },
   "build": {
     "env": {
-      "SHARP_IGNORE_GLOBAL_LIBVIPS": "1",
-      "NEXT_SHARP_PATH": "/tmp/node_modules/sharp"
+      "SHARP_IGNORE_GLOBAL_LIBVIPS": "1"
     }
-  },
-  "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh && npm run build"
+  }
 }
