chore: implement custom server and webpack configuration to disable Sharp
- Added a custom server.js to prevent Sharp from loading during runtime.
- Updated next.config.js to disable Sharp and configure webpack to exclude it from the bundle.
- Modified package.json to start the application using the new server script.
- Created webpack.config.js to manage Sharp exclusion in the build process.
- Updated vercel.json to include additional environment variables for Sharp handling.

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,9 @@
   },
   "build": {
     "env": {
-      "SHARP_IGNORE_GLOBAL_LIBVIPS": "1"
+      "SHARP_IGNORE_GLOBAL_LIBVIPS": "1",
+      "NEXT_DISABLE_SHARP": "1",
+      "NEXT_SHARP_PATH": "/tmp/node_modules/sharp"
     }
   }
 }
