--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "next dev -p 3001",
     "dev-inspect": "NODE_OPTIONS='--inspect' next dev -p 3001",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
