chore: add vercel build script and update build command in vercel.json
- Introduced vercel-build.sh to handle Vercel deployment, including environment variable setup and dependency installation.
- Updated vercel.json to execute the new build script as part of the deployment process.

--- a/vercel.json
+++ b/vercel.json
@@ -10,5 +10,6 @@
       "NEXT_DISABLE_SHARP": "1",
       "NEXT_SHARP_PATH": "/tmp/node_modules/sharp"
     }
-  }
+  },
+  "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh"
 }
