chore: update configuration to ignore Sharp and streamline build process
- Added a webpack IgnorePlugin in next.config.js to prevent Sharp from loading.
- Modified package.json to uninstall Sharp during the build process and added a postinstall script.
- Removed custom server.js and vercel-build.sh as they are no longer necessary.
- Updated vercel.json to simplify environment variable management for Sharp.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "dev-inspect": "NODE_OPTIONS='--inspect' next dev -p 3001",
-    "build": "next build",
-    "start": "node server.js",
-    "lint": "next lint"
+    "build": "npm uninstall sharp --silent && next build",
+    "start": "next start -p 3001",
+    "lint": "next lint",
+    "postinstall": "npm uninstall sharp --silent || true"
   },
   "dependencies": {
     "@atlaskit/app-provider": "^1.0.0",
