--- a/vercel.json
+++ b/vercel.json
@@ -7,9 +7,7 @@
   "build": {
     "env": {
       "SHARP_IGNORE_GLOBAL_LIBVIPS": "1",
-      "NEXT_DISABLE_SHARP": "1",
-      "NEXT_SHARP_PATH": "/tmp/node_modules/sharp"
+      "NEXT_DISABLE_SHARP": "1"
     }
-  },
-  "buildCommand": "chmod +x vercel-build.sh && ./vercel-build.sh"
+  }
 }
