chore: remove TypeScript installation from build and postinstall scripts
- Updated the build script to eliminate TypeScript installation as a development dependency.
- Modified the postinstall script to remove TypeScript installation and only uninstall Sharp.

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "dev-inspect": "NODE_OPTIONS='--inspect' next dev -p 3001",
-    "build": "npm install --legacy-peer-deps --silent && npm install typescript@^5.9.2 --save-dev --silent && npm uninstall sharp --silent && next build",
+    "build": "npm uninstall sharp --silent && next build",
     "start": "next start -p 3001",
     "lint": "next lint",
-    "postinstall": "npm install typescript@^5.9.2 --save-dev --silent && npm uninstall sharp --silent || true"
+    "postinstall": "npm uninstall sharp --silent || true"
   },
   "dependencies": {
     "@atlaskit/app-provider": "^1.0.0",
@@ -119,6 +119,7 @@
     "registry.npmjs.org": "^1.0.1",
     "styled-components": "^6.1.10",
     "swr": "^2.2.5",
+    "typescript": "^5.9.2",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
@@ -131,7 +132,6 @@
     "eslint": "8.24.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^5.9.2"
+    "tailwindcss": "^3.1.8"
   }
 }
